# letsTalk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  workBack  workFront
legacy/ai-core/: .env.example  AGENT_TRACE_FEATURE.md  ARCHITECTURE_REDESIGN.md  CONTEXT_TRANSFER_SUMMARY.md  CURRENT_STATUS.md  FUTURE_CAPABILITIES.md  PAGE_AWARE_AGENT_IMPLEMENTATION.md  PRODUCT_DESIGN.md  PROPOSAL_V1_IMPROVEMENTS.md  QUICKSTART_TRACE.md  QUICKSTART_V1_IMPROVEMENTS.md  QUICKSTART_V2.md  QUICKSTART_WORKFLOW.md  README.md  SIMPLE_AGENT_SUMMARY.md  TROUBLESHOOTING.md  V1_IMPROVEMENTS_SUMMARY.md  V1_OPTIMIZATION_COMPLETE.md  V1_TRACE_IMPLEMENTATION_SUMMARY.md  V1_V2_ARCHITECTURE.md  V2.2_REDESIGN_PLAN.md  V2_DAY1-2_SUMMARY.md  V2_DAY3-4_SUMMARY.md  V2_IMPLEMENTATION_GUIDE.md  V2_IMPLEMENTATION_PROGRESS.md  V2_MULTI_AGENT_ARCHITECTURE.md  V2_STREAM_OUTPUT_SUMMARY.md  V2_WEEK1_COMPLETE.md  V2_WEEK3_COMPLETE.md  V2_WEEK3_DAY1-2_SUMMARY.md  V2_WEEK3_DAY3-4_COMPLETE.md  V2_WEEK3_DAY3-4_SUMMARY.md  V2_WEEK3_FINAL_SUMMARY.md  VERSION_HISTORY.md  WHY_LANGGRAPH.md  demo_agent.py  demo_beautiful.py  demo_page_aware_agent.py  demo_parallel.py  demo_simple_agent.py  (+5 more)
legacy/ai-core/.agent/: page_analysis.json  parallel_result.json  workflow_result.json
legacy/ai-core/config/: agent.example.toml
legacy/ai-core/docs/: V1页面分析接口与样例.md  V1页面分析规范.md  使用指南.md  开发日志.md
legacy/ai-core/examples/: trade_list.runtime.schema.json
legacy/ai-core/scripts/: run_workbench.sh
legacy/ai-core/tests/: test_agent_code_api.py  test_agent_config.py  (+12 more)
(+299 files in other folders)
