[project]
name = "ai-requirement-os"
version = "0.1.0"
description = "AI Requirement OS control plane for CRUD-oriented enterprise systems."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0,<1.0.0",
    "langchain>=0.3.7,<0.4.0",
    "langchain-openai>=0.2.6,<0.3.0",
    "pydantic>=2.9.0,<3.0.0",
    "networkx>=3.4.0,<4.0.0",
    "openai>=1.54.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "typer>=0.12.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "langgraph>=1.0.1",
    "javalang>=0.13.0",
    "chromadb>=1.5.9",
    "tenacity>=9.1.4",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.7.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_requirement_os"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ai_requirement_os"]

[tool.uv]
package = true
